@@ -8,12 +8,11 @@ import javax.swing.*;
 
 public class Principal {
     public static void main(String[] args) {
-        //Tarea que se realizara antes de que se apage la JVM, cierra conexión de hibernate
-        Runtime.getRuntime().addShutdownHook(new Thread(HibernateUtil::shutdown));
+        Thread.startVirtualThread(HibernateUtil::getSession);
 
         try {
             UIManager.setLookAndFeel(new FlatLightLaf());
-        } catch (Exception ex) {
+        } catch (UnsupportedLookAndFeelException ex) {
             System.err.println("Failed to initialize LaF");
             JOptionPane.showMessageDialog(null,
                     """
@@ -27,5 +26,8 @@ public class Principal {
         }
 
         java.awt.EventQueue.invokeLater(() -> new SistemaContable().setVisible(true));
+
+        //Tarea que se realizara antes de que se apage la JVM, cierra conexión de hibernate
+        Runtime.getRuntime().addShutdownHook(new Thread(HibernateUtil::shutdown));
     }
 }
